sandbox/err.txt
1.cpp:7:13: warning: missing terminating " character [enabled by default]
     cout << ";
             ^
1.cpp:7:5: error: missing terminating " character
     cout << ";
     ^
1.cpp: In function ‘int main()’:
1.cpp:8:5: error: expected primary-expression before ‘return’
     return 0;
     ^
1.cpp:8:5: error: expected ‘;’ before ‘return’
